add edit_skillet_yaml for #58

--- a/src/panhandler/templates/panhandler/edit_skillet.html
+++ b/src/panhandler/templates/panhandler/edit_skillet.html
@@ -1935,7 +1935,7 @@
         <div class="card-header">
             Skillet Editor
             <div class="float-right">
-                <a href="#" onclick="show_skillet();" title="Edit Raw Skillet">
+                <a href="/panhandler/edit_skillet_yaml/{{ repo_name }}/{{ skillet.name }}" title="Edit Skillet YAML">
                     <i class="fas fa-edit text-primary mr-1"></i>
                 </a>
                 {% if view.help_text and view_help_text != '' %}
