update context title for editor toggle source

--- a/src/panhandler/templates/panhandler/edit_skillet.html
+++ b/src/panhandler/templates/panhandler/edit_skillet.html
@@ -2438,7 +2438,8 @@
                                 <label for="id_variable_toggle_ui">Toggle Visibility:</label>
                                 <div class="input-group" id="id_variable_toggle_ui">
                                     <input type="text" value="" class="form-control" id="id_variable_toggle_source"
-                                           placeholder="variable" title="Variable to check">
+                                           placeholder="variable"
+                                           title="Hide this field unless this variable is set to this value">
                                     <div class="input-group-append"><span class="input-group-text">:</span></div>
                                     <input type="text" value="" class="form-control" id="id_variable_toggle_value"
                                            placeholder="value"
