add missing variable types for #109

--- a/src/panhandler/templates/panhandler/edit_skillet.html
+++ b/src/panhandler/templates/panhandler/edit_skillet.html
@@ -2401,6 +2401,10 @@
                                 <option value="radio">Radio Select</option>
                                 <option value="number">Integer</option>
                                 <option value="float">Float</option>
+                                <option value="list">List</option>
+                                <option value="url">URL</option>
+                                <option value="json">JSON</option>
+                                <option value="email">Email</option>
                                 <option value="fqdn_or_ip">FQDN</option>
                                 <option value="ip_address">IP Address</option>
                                 <option value="cidr">CIDR (IP with Netmask)</option>
